# SPDX-FileCopyrightText: 2025 AyaSanae
#
# SPDX-License-Identifier: GPL-3.0-only

[package]
name = "ua2f-rs-common"
version = "0.1.0"
edition = "2024"

license.workspace = true

[features]
default = []
user = ["aya"]

[dependencies]
aya = { workspace = true, optional = true }

[lib]
path = "src/lib.rs"
